- Add a temp portal page  - Fix layout bug on footer position  - update install to check if TAO is alreay installed and to show correclty the logo after production mode installed
git-svn-id: http://vcs.taotesting.com/svn/oat/projects/tao/trunk@5029 62dfeb86-a93f-4914-9d13-15c0a160985d

--- a/views/css/home.css
+++ b/views/css/home.css
@@ -2,7 +2,7 @@
 
 /* Home Page */
 div#home{
-	min-height:620px;
+	min-height:480px;
 	width:99%;
 	margin:auto;
 	margin-right:3px;
