--- a/views/css/layout.css
+++ b/views/css/layout.css
@@ -9,8 +9,7 @@ html body{
 div#tabs{
 	min-height:620px;
 	width:99%;
-	margin:auto;
-	margin-right:3px;
+	margin:auto 3px 32px auto;
 }
 div#tabs .ui-tabs-nav{
 	margin-right:0px;
@@ -251,10 +250,11 @@ div#footer{
 	font-size:10px;
 	width:100%;
 	text-align:center;
-	position:relative;
+	position:fixed;
+	bottom:0;
 	margin:10px auto 0px auto;
 	padding:5px 0px 0px 0px;
-	z-index:-1;
+	z-index:-10;
 }
 /* Language section */
 div#section-lg{
